crates/uitest/fixtures/ty/def/mut_arg_non_place_expr_rejected.snap
---
source: crates/uitest/tests/ty.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty/def/mut_arg_non_place_expr_rejected.fe
---
error[8-0068]: `mut` argument must be a place
  ┌─ mut_arg_non_place_expr_rejected.fe:5:10
  │
5 │     bump(x + 1)
  │          ^^^^^ temporaries and literal values cannot be used where `mut` is expected
  │
  = help: bind the value to a named local first, then pass `mut <place>`
